# uuv

./: .gitignore  README.md
src/underwater_coverage_planning/: .gitignore  TECHNICAL_GUIDE.md  package.xml
src/underwater_coverage_planning/config/: trajectory_visualization.rviz
src/underwater_coverage_planning/launch/: compact_terrain_rexrov.launch  compact_terrain_rexrov_with_trajectory.launch  controller_only.launch
src/underwater_coverage_planning/rviz/: rexrov_default.rviz  rexrov_trajectory.rviz
src/underwater_coverage_planning/scripts/: clean_start.sh  debug_rov_sf_controller.py  fix_tf_transforms.py  rviz_camera_control.py
src/underwater_coverage_planning/scripts/guiji/: trajectory_20250722_002955.json  trajectory_20250722_002955_ros_fixed.yaml
src/underwater_coverage_planning/scripts/tf_frames/: tf_frames_20250721_122152.gv
src/underwater_coverage_planning/worlds/: underwater_heightmap.world
src/uuv_simulator/underwater_coverage_planning/: CMakeLists.txt  QUICK_START.md  README.md  TROUBLESHOOTING.md
src/uuv_simulator/underwater_coverage_planning/launch/: fix_tf_transforms.launch
src/uuv_simulator/underwater_coverage_planning/robots/: rexrov_fixed.xacro
src/uuv_simulator/underwater_coverage_planning/rviz/: rexrov_sensors.rviz
src/uuv_simulator/underwater_coverage_planning/scripts/: check_coordinate_frames.py  fix_trajectory_timestamps.py  generate_tf_frames.py  interactive_coverage_planner.py  trajectory_to_ros.py
src/uuv_simulator/underwater_coverage_planning/scripts/guiji/: trajectory_20250722_002955_launch_fixed.launch  trajectory_20250722_002955_publisher_fixed.py
src/uuv_simulator/underwater_coverage_planning/scripts/tf_frames/: tf_analysis_20250721_122152.txt
src/uuv_simulator/uuv_descriptions/launch/: upload_rexrov_coverage_planning.launch
src/uuv_simulator/uuv_descriptions/robots/: rexrov_coverage_planning.xacro
src/uuv_simulator/uuv_gazebo_plugins/uuv_gazebo_plugins/: CMakeLists.txt
src/uuv_simulator/uuv_gazebo_worlds/worlds/: complex_underwater_terrain.world
src/uuv_simulator/uuv_sensor_plugins/uuv_sensor_ros_plugins/: CMakeLists.txt
