<?xml version="1.0"?>
<package format="2">
  <name>underwater_coverage_planning</name>
  <version>1.0.0</version>
  <description>
    Underwater coverage path planning package for ROV missions.
    Includes RexROV robot model with multiple cameras, complex underwater environments,
    and integration with UUV Simulator for comprehensive coverage planning simulations.
  </description>

  <maintainer email="tb@todo.todo">tb</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Core ROS dependencies -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <!-- UUV Simulator dependencies -->
  <build_depend>uuv_descriptions</build_depend>
  <build_depend>uuv_gazebo_ros_plugins</build_depend>
  <build_depend>uuv_gazebo_worlds</build_depend>
  <build_depend>uuv_trajectory_control</build_depend>
  <build_depend>uuv_thruster_manager</build_depend>
  
  <!-- Gazebo and visualization -->
  <build_depend>gazebo_ros</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  
  <!-- Runtime dependencies -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>uuv_descriptions</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins</exec_depend>
  <exec_depend>uuv_gazebo_worlds</exec_depend>
  <exec_depend>uuv_trajectory_control</exec_depend>
  <exec_depend>uuv_thruster_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
